Fix double border on tab content

--- a/axelor-front/src/views/form/widgets/panel-tabs/panel-tabs.module.scss
+++ b/axelor-front/src/views/form/widgets/panel-tabs/panel-tabs.module.scss
@@ -15,6 +15,6 @@
     border-radius: 0;
   }
   > div {
-    --ax-panel-border: 0;
+    border: none !important;
   }
 }
